# simple-gravi-sim

./: .gitignore  .gitmodules  CMakeLists.txt  Planet.cpp  Planet.h  Rendering.cpp  Rendering.h  Shaders.cpp  Shaders.h  Ticker.cpp  Ticker.h  Vector.h  main.cpp
glad/: CMakeLists.txt
glad/include/glad/: gl.h  wgl.h
